[package]
name = "dragon"
version = "0.1.0"
description = "A CLI tool that manages Docker generated WSL2 VMs and Windows Terminal profiles."
authors = ["Alexandru Chiritescu <alex@alexchiri.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
serde_json = "1.0.59"
json_comments = "0.2.0"
anyhow = "1.0.34"
clap-verbosity-flag = "0.3.1"
simple_logger = "1.11.0"
log = "0.4.11"
regex = "1.4.2"
uuid = { verbosity = "0.8.1", features = ["v4"] }
tempfile = "3.1.0"
rand = "0.7.3"